--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 build
 *.bak
 blog.txt
-!/nbproject/private/
 !\nbproject\private\
 nbproject\private\private.properties
 
 /dist/
+/nbproject/private/
