--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,7 +83,7 @@ javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
 javafx.main.class=insidefx.ibreed.IBreed
-javafx.native.bundling.enabled=true
+javafx.native.bundling.enabled=false
 javafx.native.bundling.type=all
 javafx.preloader.class=
 # This project does not use Preloader
