--- a/build.xml
+++ b/build.xml
@@ -35,14 +35,38 @@
 
     Example of calling an Ant task from JavaFX SDK. Note that access to JavaFX SDK Ant tasks must be
     initialized; to ensure this is done add the dependence on -check-jfx-sdk-version target:
-
+-->
         <target name="-post-jfx-jar" depends="-check-jfx-sdk-version">
             <echo message="Calling jar task from JavaFX SDK"/>
-            <fx:jar ...>
-                ...
-            </fx:jar>
-        </target>
 
+            <property name="store.jar.name" value="iBreedDemo"/>
+
+            <property name="store.dir" value="dist"/>
+            <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+
+            <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+
+            <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+                <zipgroupfileset dir="dist" includes="*.jar"/>
+                <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+
+                <manifest>
+                    <attribute name="Main-Class" value="${main.class}"/>
+                    <attribute name="JavaFX-Application-Class" value="${javafx.main.class}"/>
+                    <attribute name="implementation-vendor" value="${application.vendor}"/>
+                </manifest>
+            </jar>
+
+            <zip destfile="${store.jar}">
+                <zipfileset src="${store.dir}/temp_final.jar"
+                excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+            </zip>
+
+            <delete file="${store.dir}/temp_final.jar"/>
+           <!-- <delete dir="${store.dir}/lib"/> -->
+            <delete file="${store.dir}/README.TXT"/>
+        </target>
+<!--
     For more details about JavaFX SDK Ant tasks go to
     http://docs.oracle.com/javafx/2/deployment/jfxpub-deployment.htm
 
