--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -82,7 +82,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=insidefx.ibreed.IBreed
+javafx.main.class=demoapp.IBreed
 javafx.native.bundling.enabled=false
 javafx.native.bundling.type=all
 javafx.preloader.class=
