--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-annotation.processing.enabled=true
+annotation.processing.enabled=false
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
@@ -30,17 +30,15 @@ dist.jar=${dist.dir}/iBreed.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfxrt.jar=/Library/Java/JavaVirtualMachines/jdk1.7.0_51.jdk/Contents/Home/jre/lib/jfxrt.jar
 file.reference.Undecorator.jar=lib/Undecorator.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.runtime}/lib/jfxrt.jar:\
-    ${javafx.runtime}/lib/deploy.jar:\
-    ${javafx.runtime}/lib/javaws.jar:\
-    ${javafx.runtime}/lib/plugin.jar:\
-    ${file.reference.Undecorator.jar}
+    ${file.reference.Undecorator.jar}:\
+    ${file.reference.jfxrt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,6 +63,11 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 javafx.binarycss=true
+javafx.classpath.extension=\
+    ${java.home}/lib/jfxrt.jar:\
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
